# goIt-python-web-10-Django

./: pyproject.toml
quotes/quoteapp/: forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_rename_quote_quote_text.py
quotes/quoteapp/templates/quoteapp/: author.html  base.html  index.html  quote.html
quotes/quotes/: settings.py  urls.py
