[tool.poetry]
name = "goit-python-web-10-django"
version = "0.1.0"
description = ""
authors = ["Oleksii Kukhariev <65445718+flatline-code@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_10_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
